--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-<div class="container">
+<div class="container mt-3">
     <h1>welcome back</h1>
 </div>
 {% endblock %}
