--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -16,7 +16,7 @@
             type="text" placeholder="Enter password" name="password">
         </div>
         <br>
-        <button class="btn btn-outline-primary">Submit</button>
+        <button class="btn btn-outline-success">Submit</button>
 
     </form>
 </div>
