--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -26,7 +26,7 @@
             id="password2" type="text" placeholder="Confirm your password">
         </div>
         <br>
-        <button class="btn btn-outline-primary">Submit</button>
+        <button class="btn btn-outline-success">Submit</button>
 
     </form>
 </div>
