--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,26 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="container mt-3">
-    <h1>welcome back</h1>
+    <form method="POST" action=''>
+        <h3 align='center' class="mt-3 text-muted"> Create a Note</h3>
+        <div class="form-group">
+            <textarea class="form-control"  id="note"  rows="7"
+             type="text" placeholder="Create your Note here" name="note"></textarea>
+        </div>
+        <div class="form-group mt-3" align='center'>
+            <button class="btn btn-outline-info">Submit</button>
+           
+        </div>
+        <br>
+    </form>
+    <h3 class="text-center text-muted">Notes:</h3>
+    <uL class="list-group list-group-flush" id="notes">
+        {% for note in user.notes %}
+        <li class="list-group-item">
+            {{note.data}}
+        </li>
+        {% endfor %}
+
+    </uL>
 </div>
 {% endblock %}
