data can now be pulled orderly by date

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -15,7 +15,7 @@
     </form>
     <h3 class="text-center text-muted">Notes:</h3>
     <uL class="list-group list-group-flush" id="notes">
-        {% for note in user.notes %}
+        {% for note in user.note %}
         <li class="list-group-item">
             {{note.data}}
         </li>
