--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -44,6 +44,10 @@
             integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" 
             crossorigin="anonymous">
         </script>
+        <script type="text/javascript" 
+            src="{{ url_for('static', filename='app.js')}}"
+        >
+        </script>
     
     </body>
     
