--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -5,24 +5,29 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% if  user.is_authenticated %}
+          
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
+         
+        </ul> 
+        <form class="d-flex">
+          {% if  user.is_authenticated %}
+          <p class="nav-item">
             <a class="nav-link" id="logout" href="/logout">Logout</a>
-          </li>
+          </p>
           {% else %}
-          <li class="nav-item">
+          <p class="nav-item">
             <a class="nav-link" id="register" href="/register">Sign Up</a>
-          </li>
-          <li class="nav-item">
+          </p>
+          <p class="nav-item">
             <a class="nav-link" id="login" href="/login">Login</a>
-          </li>
+          </p>
           {% endif %}
-          
-
+        </form>
+        
       </div>
     </div>
 </nav>
